IE Fix: Align Search Results
Small fix fixes sideeffect of inline-flex and postion:absolute in IE without
breaking firefox and chrome

--- a/resources/ext.blueSpiceExtendedSearch.Autocomplete.less
+++ b/resources/ext.blueSpiceExtendedSearch.Autocomplete.less
@@ -51,6 +51,7 @@ div#bs-extendedsearch-box, div#bs-extendedsearch-mobile-box {
 	background-color: white;
 	border: 1px solid @autocomplete-border-color;
 	position: absolute;
+	left:0px;
 	border-radius: 3px;
 	max-height: 400px;
 	z-index: 99;
